--- a/app/src/main/res/values/diemen.xml
+++ b/app/src/main/res/values/diemen.xml
@@ -10,6 +10,9 @@
     <dimen name="detailTopDownPadding">10dp</dimen>
     <dimen name="detailDividerMargin">2dp</dimen>
     <dimen name="insertMargin">5dp</dimen>
+    <dimen name="titleFontSize">30sp</dimen>
+    <dimen name="lineSpacing">20sp</dimen>
+    <dimen name="spacingWidth">50sp</dimen>
 
 
 </resources>
