--- a/app/src/main/res/drawable/ic_size_down.xml
+++ b/app/src/main/res/drawable/ic_size_down.xml
@@ -24,8 +24,8 @@
         android:pathData="M-1032.41,204h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-1024,200.23 -1027.77,204 -1032.41,204z" android:strokeAlpha="0.571"/>
     <path android:fillAlpha="0.571" android:fillColor="#A09F9F"
         android:pathData="M-1032.41,278h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-1024,274.23 -1027.77,278 -1032.41,278z" android:strokeAlpha="0.571"/>
-    <path android:fillColor="#A09F9F" android:pathData="M-290,-134l-23,0l0,6.27l8.36,0l0,20.91l6.28,0l0,-20.91l8.36,0z"/>
-    <path android:fillColor="#A09F9F" android:pathData="M-307.58,-120.74l-11.4,-0.02l-0.01,3.63l3.88,0l-0.02,10.11l3.63,0.01l0.02,-10.11l3.89,0.01z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-291,-135l-23,0l0,6.27l8.36,0l0,20.91l6.28,0l0,-20.91l8.36,0z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-308.58,-121.74l-11.4,-0.02l-0.01,3.63l3.88,0l-0.02,10.11l3.63,0.01l0.02,-10.11l3.89,0.01z"/>
     <path android:fillColor="#A09F9F" android:pathData="M-234.64,-137.05h5.22l7.8,22.05h-5l-1.46,-4.53h-8.12l-1.49,4.53h-4.82L-234.64,-137.05zM-234.94,-123.33h5.65l-2.79,-8.68L-234.94,-123.33z"/>
     <path android:fillColor="#A09F9F" android:pathData="M-249,-111h34v6h-34z"/>
     <path android:fillColor="#A09F9F"
@@ -77,51 +77,76 @@
     <path android:fillColor="#00000000"
         android:pathData="M-169,38.5L-148,38.5"
         android:strokeColor="#A09F9F" android:strokeWidth="3"/>
-    <path android:fillColor="#FF000000" android:pathData="M70,65h47v47h-47z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M129,65h47v47h-47z"/>
-    <path android:fillColor="#EA2621" android:pathData="M188,65h47v47h-47z"/>
-    <path android:fillColor="#2525BA" android:pathData="M244,65h47v47h-47z"/>
-    <path android:fillColor="#146D20" android:pathData="M298,66h47v47h-47z"/>
-    <path android:fillColor="#FCC047" android:pathData="M70,125h47v47h-47z"/>
-    <path android:fillColor="#97D86C" android:pathData="M129,125h47v47h-47z"/>
-    <path android:fillColor="#ED4F6A" android:pathData="M70,185h47v47h-47z"/>
-    <path android:fillColor="#D6133D" android:pathData="M129,185h47v47h-47z"/>
-    <path android:fillColor="#709EFC" android:pathData="M188,125h47v47h-47z"/>
-    <path android:fillColor="#F96E90" android:pathData="M244,125h47v47h-47z"/>
-    <path android:fillColor="#9B9B9B" android:pathData="M298,126h47v47h-47z"/>
+    <path android:fillColor="#FF000000" android:pathData="M204,-83h47v47h-47z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M263,-83h47v47h-47z"/>
+    <path android:fillColor="#EA2621" android:pathData="M322,-83h47v47h-47z"/>
+    <path android:fillColor="#2525BA" android:pathData="M378,-83h47v47h-47z"/>
+    <path android:fillColor="#146D20" android:pathData="M432,-82h47v47h-47z"/>
+    <path android:fillColor="#FCC047" android:pathData="M204,-23h47v47h-47z"/>
+    <path android:fillColor="#97D86C" android:pathData="M263,-23h47v47h-47z"/>
+    <path android:fillColor="#ED4F6A" android:pathData="M204,37h47v47h-47z"/>
+    <path android:fillColor="#D6133D" android:pathData="M263,37h47v47h-47z"/>
+    <path android:fillColor="#494949" android:pathData="M322,37h47v47h-47z"/>
+    <path android:fillColor="#709EFC" android:pathData="M322,-23h47v47h-47z"/>
+    <path android:fillColor="#F96E90" android:pathData="M378,-23h47v47h-47z"/>
+    <path android:fillColor="#9B9B9B" android:pathData="M432,-22h47v47h-47z"/>
     <path android:fillColor="#A09F9F" android:pathData="M100.22,-107l-11.31,-14.71l3.05,-2.35l7.96,10.35l12.02,-18.88l3.25,2.07z"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M155,-96l10,13l14,-22"
-        android:strokeColor="#A09F9F" android:strokeWidth="4"/>
     <path android:fillColor="#A09F9F" android:pathData="M-227.27,-47.49c0,1.7 -0.2,2.95 -0.6,3.73c-0.63,1.39 -1.99,2.09 -4.08,2.09c-2.1,0 -3.47,-0.7 -4.09,-2.09c-0.4,-0.78 -0.61,-2.03 -0.61,-3.73V-61h-5.27v13.53c0,2.64 0.41,4.69 1.23,6.16c1.53,2.69 4.45,4.04 8.74,4.04s7.2,-1.35 8.72,-4.04c0.82,-1.47 1.23,-3.52 1.23,-6.16V-61h-5.27V-47.49z"/>
     <path android:fillColor="#A09F9F" android:pathData="M-54.92,-59.05h5.69L-40.73,-35h-5.45l-1.59,-4.94h-8.85L-58.25,-35h-5.26L-54.92,-59.05zM-55.26,-44.09h6.16l-3.04,-9.46L-55.26,-44.09z"/>
     <path android:fillColor="#A09F9F" android:pathData="M-34,-52l0,-3l-11.84,0l1.07,3z"/>
     <path android:fillColor="#A09F9F" android:pathData="M-34,-46.33l0,-3l-9.81,0l1.07,3z"/>
     <path android:fillColor="#A09F9F" android:pathData="M-34,-40.67l0,-3l-7.79,0l1.07,3z"/>
     <path android:fillColor="#A09F9F" android:pathData="M-34,-35l0,-3l-5.76,0l1.07,3z"/>
-    <path android:fillColor="#A09F9F" android:pathData="M-79.92,-178.05h5.69l8.51,24.05h-5.45l-1.59,-4.94h-8.85l-1.63,4.94h-5.26L-79.92,-178.05zM-80.26,-163.09h6.16l-3.04,-9.46L-80.26,-163.09z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-79.92,-237.05h5.69l8.51,24.05h-5.45l-1.59,-4.94h-8.85l-1.63,4.94h-5.26L-79.92,-237.05zM-80.26,-222.09h6.16l-3.04,-9.46L-80.26,-222.09z"/>
     <path android:fillColor="#00000000"
-        android:pathData="M-72.82,-178.07L-64.18,-153.93"
+        android:pathData="M-72.82,-237.07L-64.18,-212.93"
         android:strokeColor="#A09F9F" android:strokeWidth="3"/>
     <path android:fillColor="#00000000"
-        android:pathData="M-72,-175.5L-60,-175.5"
+        android:pathData="M-72,-234.5L-60,-234.5"
         android:strokeColor="#A09F9F" android:strokeWidth="3"/>
     <path android:fillColor="#00000000"
-        android:pathData="M-72,-169.83L-60,-169.83"
+        android:pathData="M-72,-228.83L-60,-228.83"
         android:strokeColor="#A09F9F" android:strokeWidth="3"/>
     <path android:fillColor="#00000000"
-        android:pathData="M-72,-164.17L-60,-164.17"
+        android:pathData="M-72,-223.17L-60,-223.17"
         android:strokeColor="#A09F9F" android:strokeWidth="3"/>
     <path android:fillColor="#00000000"
-        android:pathData="M-72,-158.5L-60,-158.5"
+        android:pathData="M-72,-217.5L-60,-217.5"
         android:strokeColor="#A09F9F" android:strokeWidth="3"/>
     <path android:fillColor="#A09F9F" android:pathData="M-248,28h32v3h-32z"/>
     <path android:fillColor="#A09F9F" android:pathData="M-227.84,25.37l-4.58,-1.08c-1.77,-0.41 -2.92,-0.77 -3.47,-1.08c-0.85,-0.46 -1.27,-1.16 -1.27,-2.09c0,-1.01 0.43,-1.8 1.29,-2.37c0.86,-0.57 2.01,-0.85 3.45,-0.85c1.29,0 2.38,0.22 3.25,0.65c1.3,0.66 2.01,1.77 2.1,3.34h5.24c-0.1,-2.77 -1.13,-4.89 -3.09,-6.34c-1.96,-1.46 -4.34,-2.18 -7.12,-2.18c-3.33,0 -5.86,0.77 -7.58,2.32c-1.72,1.55 -2.58,3.49 -2.58,5.82c0,1.85 0.47,3.34 1.39,4.48h15.05C-226.39,25.77 -227.07,25.56 -227.84,25.37z"/>
     <path android:fillColor="#A09F9F" android:pathData="M-222.57,28h-15.32c1.04,0.41 2.38,0.79 4.05,1.16l2.82,0.62c1.65,0.35 2.86,0.76 3.62,1.22c0.76,0.47 1.14,1.14 1.14,2c0,1.48 -0.78,2.48 -2.33,3.03c-0.82,0.28 -1.88,0.42 -3.2,0.42c-2.19,0 -3.74,-0.54 -4.64,-1.61c-0.37,-0.44 -0.65,-1.06 -0.84,-1.84h-5.32c0.18,2.32 1.15,4.18 2.91,5.56c1.97,1.55 4.67,2.33 8.1,2.33c3.36,0 5.96,-0.79 7.81,-2.36c1.84,-1.57 2.76,-3.55 2.76,-5.94C-221,30.69 -221.53,29.17 -222.57,28z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-56.16,31.84l9.16,-9.15l9.16,9.15z"/>
     <path android:fillColor="#00000000"
-        android:pathData="M-56.16,31.84l9.16,-9.15l9.16,9.15"
+        android:pathData="M-109.16,30.84l9.16,-9.15l9.16,9.15"
         android:strokeColor="#A09F9F" android:strokeWidth="4"/>
+    <path android:fillColor="#A09F9F" android:pathData="M35.16,22.69l-9.16,9.15l-9.16,-9.15z"/>
     <path android:fillColor="#00000000"
-        android:pathData="M35.16,22.69l-9.16,9.15l-9.16,-9.15"
-        android:strokeColor="#A09F9F" android:strokeWidth="4"/>
+        android:pathData="M-62,-132.5L-33,-132.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-53,-125.17L-33,-125.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-53,-117.5L-33,-117.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M-62,-110.5L-33,-110.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-56.5,-126.5l0,10l-5.5,-5z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M13.5,-117l0,-9l5.5,4.5z"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,-132.5L42,-132.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M22,-125.17L42,-125.17"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M22,-117.5L42,-117.83"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#00000000"
+        android:pathData="M13,-110.5L42,-110.5"
+        android:strokeColor="#A09F9F" android:strokeWidth="3"/>
+    <path android:fillColor="#A09F9F" android:pathData="M42.48,93.72c-0.6,-3.82 -3.69,-3.95 -3.69,-3.95c-12.53,-0.86 -23.85,0.04 -23.85,0.04c-2.57,0.56 -3.56,2.57 -3.82,5.06c-0.26,2.49 -0.62,7.99 0,12.57c0.64,4.76 4.33,4.68 4.33,4.68c3.99,0.46 19.6,0.34 23.42,-0.09c3.82,-0.43 3.95,-5.49 3.95,-5.49S43.39,99.49 42.48,93.72zM23.78,105.09v-9.22l8.67,4.61L23.78,105.09z"/>
+    <path android:fillColor="#A09F9F" android:pathData="M-46.55,113c-3.75,0 -7.49,0 -11.24,0c-1.44,0 -2.55,-0.84 -2.87,-2.19c-0.05,-0.21 -0.08,-0.44 -0.08,-0.66c0,-5.66 0,-11.32 0,-16.98c0,-1.4 0.94,-2.55 2.31,-2.83c0.22,-0.04 0.46,-0.05 0.69,-0.05c7.46,0 14.93,0 22.39,0c1.54,0 2.68,0.91 2.96,2.36c0.02,0.1 0.02,0.21 0.02,0.31c0,5.8 0,11.59 0,17.39c0,1.24 -1.13,2.49 -2.37,2.61c-0.27,0.03 -0.54,0.04 -0.81,0.04C-39.21,113 -42.88,113 -46.55,113zM-49.32,101.69c-2.84,2.84 -5.66,5.66 -8.46,8.46c7.48,0 15.01,0 22.52,0c-2.35,-2.35 -4.69,-4.69 -7.06,-7.06c-0.92,0.92 -1.86,1.86 -2.8,2.81C-46.54,104.47 -47.95,103.06 -49.32,101.69zM-36.61,97.39c0,-1.57 -1.27,-2.85 -2.84,-2.84c-1.57,0.01 -2.82,1.26 -2.83,2.82c-0.01,1.58 1.25,2.84 2.83,2.85C-37.88,100.23 -36.61,98.96 -36.61,97.39z"/>
 </vector>
