--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="colorTextWhite">#ffffff</color>
     <color name="colorTextRed">#EA2621</color>
     <color name="colorTextBlue">#2525BA</color>
-    <color name="colorTextGreen">#146D20</color>
+    <color name="colorTextGreen">#19882A</color>
     <color name="colorBackYellow">#FCC047</color>
     <color name="colorBackGreen">#97D86C</color>
     <color name="colorBackBlue">#709EFC</color>
