--- a/app/src/main/res/layout/detail_normal.xml
+++ b/app/src/main/res/layout/detail_normal.xml
@@ -122,7 +122,7 @@
             android:textSize="20sp"
             android:layout_gravity="center_vertical"
             android:text="Text Size"
-            android:fontFamily="@font/Arial"/>
+            android:fontFamily="@font/arial"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -157,7 +157,7 @@
             android:textSize="20sp"
             android:layout_gravity="center_vertical"
             android:text="Text Color"
-            android:fontFamily="@font/Arial"/>
+            android:fontFamily="@font/arial"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -187,7 +187,7 @@
             android:textSize="20sp"
             android:layout_gravity="center_vertical"
             android:text="Highlight Color"
-            android:fontFamily="@font/Arial"/>
+            android:fontFamily="@font/arial"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -219,7 +219,7 @@
             android:textSize="20sp"
             android:layout_gravity="center_vertical"
             android:text="Indentation"
-            android:fontFamily="@font/Arial"/>
+            android:fontFamily="@font/arial"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
