--- a/app/src/main/res/layout/frame_wysiwyg.xml
+++ b/app/src/main/res/layout/frame_wysiwyg.xml
@@ -32,7 +32,8 @@
                     android:background="@null"
                     android:layout_gravity="center_vertical"
                     android:fontFamily="@font/arial"
-                    android:textSize="@dimen/titleFontSize"/>
+                    android:textSize="@dimen/titleFontSize"
+                    />
             </LinearLayout>
 
 
