--- a/app/src/main/res/values/diemen.xml
+++ b/app/src/main/res/values/diemen.xml
@@ -13,6 +13,7 @@
     <dimen name="titleFontSize">30sp</dimen>
     <dimen name="lineSpacing">20sp</dimen>
     <dimen name="spacingWidth">50sp</dimen>
-
+    <dimen name="buttonMargin">2dp</dimen>
+    <dimen name="buttonMarginBetweenCategory">9dp</dimen>
 
 </resources>
