--- a/app/src/main/res/layout/popup_textcolor.xml
+++ b/app/src/main/res/layout/popup_textcolor.xml
@@ -17,14 +17,14 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/color_text_white"
-            android:background="@drawable/color_panel"
+            android:background="@drawable/ic_color_panel"
             android:layout_margin="10dp"/>
 
         <Button
             android:id="@+id/color_text_white"
             android:layout_width="@dimen/colorPanelSize"
             android:layout_height="@dimen/colorPanelSize"
-            android:background="@drawable/color_panel"
+            android:background="@drawable/ic_color_panel"
             app:layout_constraintStart_toEndOf="@id/color_text_black"
             app:layout_constraintEnd_toStartOf="@id/color_text_red"
             android:layout_margin="10dp"/>
@@ -35,7 +35,7 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toEndOf="@id/color_text_white"
             app:layout_constraintEnd_toStartOf="@id/color_text_blue"
-            android:background="@drawable/color_panel"
+            android:background="@drawable/ic_color_panel"
             android:layout_margin="10dp"/>
 
         <Button
@@ -44,7 +44,7 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toEndOf="@id/color_text_red"
             app:layout_constraintEnd_toStartOf="@id/color_text_green"
-            android:background="@drawable/color_panel"
+            android:background="@drawable/ic_color_panel"
             android:layout_margin="10dp"/>
 
         <Button
@@ -53,7 +53,7 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toEndOf="@id/color_text_blue"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/color_panel"
+            android:background="@drawable/ic_color_panel"
             android:layout_margin="10dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
