--- a/app/src/main/res/layout/popup_textcolor.xml
+++ b/app/src/main/res/layout/popup_textcolor.xml
@@ -18,6 +18,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/color_text_white"
             android:background="@drawable/ic_color_panel"
+            android:backgroundTint="@color/colorTextBlack"
             android:layout_margin="10dp"/>
 
         <Button
@@ -25,6 +26,7 @@
             android:layout_width="@dimen/colorPanelSize"
             android:layout_height="@dimen/colorPanelSize"
             android:background="@drawable/ic_color_panel"
+            android:backgroundTint="@color/colorTextWhite"
             app:layout_constraintStart_toEndOf="@id/color_text_black"
             app:layout_constraintEnd_toStartOf="@id/color_text_red"
             android:layout_margin="10dp"/>
@@ -36,6 +38,7 @@
             app:layout_constraintStart_toEndOf="@id/color_text_white"
             app:layout_constraintEnd_toStartOf="@id/color_text_blue"
             android:background="@drawable/ic_color_panel"
+            android:backgroundTint="@color/colorTextRed"
             android:layout_margin="10dp"/>
 
         <Button
@@ -45,6 +48,7 @@
             app:layout_constraintStart_toEndOf="@id/color_text_red"
             app:layout_constraintEnd_toStartOf="@id/color_text_green"
             android:background="@drawable/ic_color_panel"
+            android:backgroundTint="@color/colorTextBlue"
             android:layout_margin="10dp"/>
 
         <Button
@@ -54,6 +58,7 @@
             app:layout_constraintStart_toEndOf="@id/color_text_blue"
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@drawable/ic_color_panel"
+            android:backgroundTint="@color/colorTextGreen"
             android:layout_margin="10dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
