--- a/app/src/main/res/layout/popup_textcolor.xml
+++ b/app/src/main/res/layout/popup_textcolor.xml
@@ -17,7 +17,7 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/color_text_white"
-            android:background="@drawable/ic_color_panel"
+            android:background="@drawable/color_panel"
             android:backgroundTint="@color/colorTextBlack"
             android:layout_margin="10dp"/>
 
@@ -36,7 +36,7 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toEndOf="@id/color_text_white"
             app:layout_constraintEnd_toStartOf="@id/color_text_blue"
-            android:background="@drawable/ic_color_panel"
+            android:background="@drawable/color_panel"
             android:backgroundTint="@color/colorTextRed"
             android:layout_margin="10dp"/>
 
@@ -46,7 +46,7 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toEndOf="@id/color_text_red"
             app:layout_constraintEnd_toStartOf="@id/color_text_green"
-            android:background="@drawable/ic_color_panel"
+            android:background="@drawable/color_panel"
             android:backgroundTint="@color/colorTextBlue"
             android:layout_margin="10dp"/>
 
@@ -56,7 +56,7 @@
             android:layout_height="@dimen/colorPanelSize"
             app:layout_constraintStart_toEndOf="@id/color_text_blue"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/ic_color_panel"
+            android:background="@drawable/color_panel"
             android:backgroundTint="@color/colorTextGreen"
             android:layout_margin="10dp"/>
 
